# rightfel.github.io

./: .gitignore  Cargo.toml  index.html
.github/workflows/: gh-pages-deploy.yml
scripts/: script.js
src/: app.rs  main.rs
src/components/module/: home.rs  mod.rs  projects.rs  resume.rs
src/components/shared/: footer.rs  header.rs  main_frame.rs  mod.rs  navigation_bar.rs  new_tab_svg.rs  theme_button.rs
style/: style.css
