[package]
name = "hanifanrn-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.7", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.7", features = ["csr", "nightly"] }